--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "countries-list": "^3.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "i18next": "^25.0.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -53,15 +55,17 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.5.1",
+    "react-phone-input-2": "^2.15.1",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
-    "zod": "^3.23.8"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
