--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.5.1",
-    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.12",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^11.0.5",
